[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Weapons/grenade.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/projectiles.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.31382, 2.04289 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0157

[node name="grenade" type="RigidBody2D"]
collision_mask = 11
gravity_scale = 2.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.412767, 0.52534 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 11

[node name="HurtBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_grenade_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
